Fix spacing between consecutive notes when rolled up
- Add margin-top: 100px between consecutive open notes
- Add margin-top: 200px for rolled-up consecutive notes to clear
  the previous note's -150px bottom margin

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1766,6 +1766,16 @@ html.night .site-footer p {
     margin-top: -50px;
 }
 
+/* Space between consecutive notes */
+.note-scroll + .note-scroll {
+    margin-top: 100px;
+}
+
+/* When a consecutive note is rolled up, needs more top margin to clear previous note's -150px bottom */
+.note-scroll + .note-scroll.rolled-up {
+    margin-top: 200px;
+}
+
 .note-scroll::before {
     content: "";
     display: block;
